fixed homepage overflow

--- a/src/components/custom-heading/custom-heading.scss
+++ b/src/components/custom-heading/custom-heading.scss
@@ -25,6 +25,9 @@ $secondaryColor: #ffffff;
   .after {
     width: 150px;
     // margin: 10px;
+    @include smartphone() {
+      width: 100%;
+    }
   }
   .after {
     transform: rotate(180deg);
